fix style on mobile

--- a/app/assets/stylesheets/front/mansory.css
+++ b/app/assets/stylesheets/front/mansory.css
@@ -38,7 +38,7 @@
         width: 48%;
         border: 2px solid #ffffff;
     }
-    .container{
+    /* .container{
         padding-right: 0px; 
-    }
+    } */
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
